# runic

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  bug-tracker.md  lefthook.yml
crates/runic-agent/: Cargo.toml
crates/runic-agent-core/: Cargo.toml
crates/runic-agent-core/src/: agent.rs  approval.rs  error.rs  event.rs  hooks.rs  lib.rs  state.rs  structured.rs  subagent.rs  tool.rs
crates/runic-agent-core/tests/: agent_loop.rs
crates/runic-agent/src/: lib.rs  loop_guard.rs  retry.rs  run.rs
crates/runic-agent/src/turn/: dispatch.rs  history.rs  hooks.rs  mod.rs  provider_call.rs  request.rs  response.rs
crates/runic-agent/tests/: cancellation.rs  event_order.rs  hooks.rs  loop.rs  persistence_summary.rs  proptest_invariants.rs  response_shape.rs  run_loop.rs  streaming.rs  tools.rs  transient_tool.rs
crates/runic-agent/tests/harness/: mod.rs
crates/runic-agents/: Cargo.toml
crates/runic-agents/src/: lib.rs  registry.rs  types.rs
crates/runic-blobs/: Cargo.toml
crates/runic-blobs/src/: error.rs  file.rs  lib.rs  metadata.rs  provider.rs  resolver.rs  store.rs
crates/runic-blobs/tests/: integration.rs
crates/runic-commands/: Cargo.toml
crates/runic-commands/src/: lib.rs  security.rs
crates/runic-context-engine/: Cargo.toml
crates/runic-context-engine/src/: compactor.rs  composite.rs  layer.rs  lib.rs  reminder.rs  spillover.rs
crates/runic-context-engine/src/layers/: base.rs  file.rs  memory.rs  mod.rs  persona.rs  user.rs
crates/runic-examples/: Cargo.toml
crates/runic-examples/examples/: custom_reminder.rs  minimal.rs  with_blob.rs  with_call_limit.rs  with_hooks.rs  with_interceptor.rs  with_mcp.rs  with_run_context.rs  with_tools.rs
crates/runic-examples/src/: lib.rs
crates/runic-filesystem/: Cargo.toml
crates/runic-filesystem/src/: composite.rs  dirs.rs  lib.rs  local.rs  memory.rs
crates/runic-foundry/: Cargo.toml
crates/runic-foundry/src/: artifact_resolver.rs  assemble.rs  blobs.rs  child.rs  context.rs  dirs.rs  lib.rs  mcp.rs  memory.rs  memory_review.rs  sessions.rs  skills.rs  subagents.rs  tools.rs
crates/runic-foundry/tests/: artifact_resolver.rs  assemble.rs  child.rs
crates/runic-hook/: Cargo.toml
crates/runic-hook/src/: lib.rs
crates/runic-mcp/: Cargo.toml
crates/runic-mcp/src/: client.rs  config.rs  deferred.rs  error.rs  lib.rs  loader.rs  manager.rs  pool.rs  protocol.rs  tool.rs  tool_search.rs  transport.rs  transport_http.rs
crates/runic-memory/: Cargo.toml
crates/runic-memory/src/: builder.rs  config.rs  error.rs  lib.rs  lock.rs  manager.rs  provider.rs  review.rs  storage.rs  store.rs  threats.rs  tool.rs
crates/runic-memory/tests/: integration.rs  store_proptest.rs
crates/runic-plugins/: Cargo.toml
crates/runic-plugins/src/: lib.rs
crates/runic-provider/: Cargo.toml
crates/runic-provider-core/: Cargo.toml
crates/runic-provider-core/src/: lib.rs
crates/runic-provider-gemini/: Cargo.toml
crates/runic-provider-gemini/src/: lib.rs
crates/runic-provider/src/: anthropic.rs  gemini.rs  lib.rs  openai.rs  think_filter.rs
crates/runic-serve/: API.md  Cargo.toml
crates/runic-serve/scripts/: test-postgres.sh
crates/runic-serve/src/: app.rs  approval.rs  error.rs  factory.rs  human.rs  lib.rs  openapi.rs  pool.rs  tenant.rs  wire.rs
crates/runic-serve/src/routes/: artifacts.rs  health.rs  mod.rs  runs.rs  threads.rs  transcribe.rs
crates/runic-serve/tests/: api_artifacts.rs  api_errors.rs  api_proptest.rs  api_runs.rs  api_threads.rs  api_transcribe.rs  integration.rs  openapi.rs  postgres_api.rs  wire_proptest.rs
crates/runic-sessions/: Cargo.toml
crates/runic-sessions/src/: error.rs  file.rs  lib.rs  persister.rs  postgres.rs  replay.rs  store.rs
crates/runic-sessions/tests/: integration.rs  postgres.rs
crates/runic-shell-tools/: Cargo.toml
crates/runic-shell-tools/src/: edit_file.rs  error.rs  glob.rs  grep.rs  lib.rs  ls.rs  paths.rs  read_file.rs  walk.rs  write_file.rs
crates/runic-skills/: Cargo.toml
crates/runic-skills/src/: layer.rs  lib.rs  loader.rs  registry.rs  security.rs  set.rs  source.rs  tool.rs  types.rs  view.rs
crates/runic-skills/tests/: loader.rs
crates/runic-state/: Cargo.toml
crates/runic-state/src/: event.rs  lib.rs  state.rs
crates/runic-state/tests/: replay_proptest.rs
crates/runic-storage-backend/: Cargo.toml
crates/runic-storage-backend/src/: backend.rs  error.rs  lib.rs  local.rs  memory.rs  namespaced.rs  overlay.rs  rooted.rs  types.rs
crates/runic-storage-backend/tests/: composition.rs
crates/runic-subagent/: Cargo.toml
crates/runic-subagent/src/: def.rs  delegate.rs  dirs.rs  lib.rs  loader.rs  security.rs
crates/runic-subagent/tests/: delegate.rs  loader.rs
crates/runic-substrate/: Cargo.toml
crates/runic-substrate/migrations/: 0001_sessions.sql  0002_chat_search.sql  0003_artifacts.sql
crates/runic-substrate/scripts/: test-postgres.sh
crates/runic-substrate/src/: artifact_tool.rs  artifacts.rs  builders.rs  lib.rs  local.rs  memory.rs  replay.rs  sessions.rs  tool.rs
crates/runic-substrate/src/postgres/: artifacts.rs  mod.rs  (+1 more)
crates/runic-substrate/tests/: error_mapping.rs  local_contract.rs  memory_contract.rs  postgres_contract.rs  proptest_stores.rs  store_proptest.rs
crates/runic-tool/: Cargo.toml
crates/runic-tool-core/: Cargo.toml
crates/runic-tool-core/src/: approval.rs  background.rs  lib.rs  tool.rs
crates/runic-tool/src/: lib.rs
crates/runic-tools/: Cargo.toml
crates/runic-tools/fuzz/: Cargo.toml
crates/runic-tools/src/: calc.rs  composio.rs  fs.rs  hitl.rs  lib.rs  patch.rs  time.rs  toolset.rs  weather.rs  web.rs
crates/runic-tools/tests/: parsers_proptest.rs
crates/runic-transcriber/: Cargo.toml
crates/runic-transcriber/src/: lib.rs  mistral.rs
runic/: Cargo.toml
runic/src/: config.rs  demo_tools.rs  harness.rs  hooks.rs  main.rs  repl.rs  serve.rs
runic/src/agent/: ask_user.rs  build.rs  commands.rs  context.rs  context_layers.rs  hooks.rs  mcp.rs  memory.rs  mod.rs  prompt.rs  providers.rs  subagent_loader.rs  titles.rs  wiki_tools.rs
(+44 files in other folders)
