[workspace]
resolver = "2"
members = [
    "runic",
    "crates/runic-types",
    "crates/runic-state",
    "crates/runic-provider",
    "crates/runic-tool",
    "crates/runic-hook",
    "crates/runic-agent",
    "crates/runic-subagent",
    "crates/runic-filesystem",
    "crates/runic-tools",
    "crates/runic-skills",
    "crates/runic-commands",
    "crates/runic-mcp",
    "crates/runic-plugins",
    "crates/runic-substrate",
    "crates/runic-memory",
    "crates/runic-serve",
    "crates/runic-web",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["machache <machache@eittel.com>"]
license = "MIT"
publish = false

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
dotenvy = "0.15"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
eventsource-stream = "0.2"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tempfile = "3"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] }
tokio-stream = "0.1"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
serde_yml = "0.0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
regex = "1"
libc = "0.2"
globset = "0.4"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
async-stream = "0.3"

runic-skills = { path = "crates/runic-skills" }
runic-commands = { path = "crates/runic-commands" }
runic-mcp = { path = "crates/runic-mcp" }
runic-plugins = { path = "crates/runic-plugins" }
runic-substrate = { path = "crates/runic-substrate" }
runic-memory = { path = "crates/runic-memory" }
runic-serve = { path = "crates/runic-serve" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
