[package]
name = "runic"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "runic"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
runic-provider-core = { workspace = true }
runic-provider-anthropic = { workspace = true }
runic-provider-gemini = { workspace = true }
runic-provider-openai = { workspace = true }
runic-mcp = {workspace = true }
runic-agent-core = { workspace = true }
runic-message-types = {workspace = true }
runic-tool-core = { workspace = true }
runic-storage-backend = { workspace = true }
async-trait = { workspace =  true }
base64 = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
runic-agents = { workspace = true }
runic-skills = { workspace = true }
runic-shell-tools = { workspace = true }
runic-context-engine = { workspace = true }
runic-commands = { workspace = true }
runic-serve = { workspace = true }
runic-sessions = { workspace = true, features = ["postgres"] }
runic-memory = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true }
dotenvy = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
