[package]
name = "runic"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "runic"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
dotenvy = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# New stack (path deps — not in workspace.dependencies yet).
runic-agent = { path = "../crates/runic-agent" }
runic-provider = { path = "../crates/runic-provider", features = ["anthropic"] }
runic-filesystem = { path = "../crates/runic-filesystem" }
runic-tools = { path = "../crates/runic-tools" }

# New stack (already in workspace.dependencies).
runic-memory = { workspace = true }
runic-serve = { workspace = true }
runic-substrate = { workspace = true }
