[package]
name = "runic"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "runic"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
dotenvy = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# New stack (path deps — not in workspace.dependencies yet).
runic-agent = { path = "../crates/runic-agent" }
runic-provider = { path = "../crates/runic-provider", features = ["anthropic", "openai"] }
runic-filesystem = { path = "../crates/runic-filesystem" }
runic-tools = { path = "../crates/runic-tools" }
runic-subagent = { path = "../crates/runic-subagent" }

# New stack (already in workspace.dependencies).
runic-memory = { workspace = true }
runic-serve = { workspace = true }
runic-skills = { workspace = true }
runic-substrate = { workspace = true, features = ["postgres"] }
