[package]
name = "runic-examples"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
runic-agent-core = { workspace = true }
runic-context-engine = { workspace = true }
runic-mcp = { workspace = true }
runic-message-types = { workspace = true }
runic-provider-anthropic = { workspace = true }
runic-provider-core = { workspace = true }
runic-storage-backend = { workspace = true }
runic-tool-core = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "io-std", "io-util", "signal"] }
tokio-stream = { workspace = true }
tracing = { workspace = true }

[[example]]
name = "minimal"
path = "examples/minimal.rs"

[[example]]
name = "with_tools"
path = "examples/with_tools.rs"

[[example]]
name = "with_hooks"
path = "examples/with_hooks.rs"

[[example]]
name = "custom_reminder"
path = "examples/custom_reminder.rs"

[[example]]
name = "with_mcp"
path = "examples/with_mcp.rs"
