[package]
name = "runic-foundry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
runic-provider = { path = "../runic-provider" }
runic-substrate = { path = "../runic-substrate", features = ["postgres"] }
runic-tool = { path = "../runic-tool" }
runic-hook = { path = "../runic-hook" }
runic-memory = { path = "../runic-memory"}
runic-skills = { path = "../runic-skills" }
runic-state = { path = "../runic-state" }
runic-types = { path = "../runic-types" }
runic-agent = { path = "../runic-agent" }
runic-subagent = { path = "../runic-subagent" }
runic-tools = { path = "../runic-tools" }
runic-mcp = { path = "../runic-mcp" }

anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt"] }

[dev-dependencies]
tempfile = { workspace = true }
