[package]
name = "runic-hook"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait = { workspace = true }
runic-state = { path = "../runic-state" }
runic-types = { path = "../runic-types" }
runic-tool = { path = "../runic-tool" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde_json = { workspace = true }
