[package]
name = "runic-plugins"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait = { workspace = true }
runic-agents = { workspace = true }
runic-skills = { workspace = true }
runic-storage-backend = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
