[package]
name = "runic-plugins"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
tracing = { workspace = true }

runic-skills = { path = "../runic-skills" }
runic-subagent = { path = "../runic-subagent" }
runic-commands = { path = "../runic-commands" }

[dev-dependencies]
tempfile = { workspace = true }
