[package]
name = "runic-plugins"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

runic-skills = { path = "../runic-skills" }
runic-subagent = { path = "../runic-subagent" }
runic-commands = { path = "../runic-commands" }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
