[package]
name = "runic-provider"
version.workspace = true
# edition 2021 (not the workspace's 2024): the cp'd OpenFang drivers use 2021
# match-ergonomics; per-crate edition keeps them compiling unchanged.
edition = "2021"
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait = { workspace = true }
runic-types = { path = "../runic-types" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
# driver-only deps (pulled in by per-provider features)
futures = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
zeroize = { version = "1", optional = true }
uuid = { workspace = true, optional = true }

[features]
# Concrete drivers, opt-in (tree-shaking). The trait/contract always compiles.
anthropic = ["dep:futures", "dep:reqwest", "dep:base64", "dep:tracing", "dep:zeroize"]
openai    = ["dep:futures", "dep:reqwest", "dep:base64", "dep:tracing", "dep:zeroize"]
gemini    = ["dep:futures", "dep:reqwest", "dep:tracing", "dep:zeroize", "dep:uuid"]
