[package]
name = "runic-serve"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
runic-agent = { path = "../runic-agent" }
runic-state = { path = "../runic-state" }
runic-tool = { path = "../runic-tool" }
runic-types = { path = "../runic-types" }
runic-substrate = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread", "time", "signal", "net"] }
tokio-stream = { workspace = true, features = ["sync"] }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
runic-provider = { path = "../runic-provider" }
runic-foundry = { path = "../runic-foundry" }
tempfile = { workspace = true }
tower = { workspace = true, features = ["util"] }
proptest = { workspace = true }
