[package]
name = "runic-sessions"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
runic-agent-core = { workspace = true }
runic-message-types = { workspace = true }
runic-storage-backend = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "json"], optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
tracing = { workspace = true }

[features]
# Optional Postgres-backed SessionStore. Off by default so file-only users
# don't pull sqlx + a TLS/Postgres stack.
postgres = ["dep:sqlx"]

[dev-dependencies]
tempfile = { workspace = true }
