[package]
name = "runic-shell-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait = { workspace = true }
globset = { workspace = true }
regex = { workspace = true }
runic-storage-backend = { workspace = true }
runic-tool-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
