[package]
name = "runic-skills"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
runic-storage-backend = { workspace = true }
runic-context-engine = { workspace = true }
runic-tool-core = { workspace = true }
runic-message-types = { workspace = true }
