[package]
name = "runic-skills"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[features]
# S3-backed skill sources. Off by default — pulls the AWS SDK. The trait and
# wiring point exist regardless; this gates the concrete impl.
s3 = []

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["fs", "rt"] }

runic-tool = { path = "../runic-tool" }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
