[package]
name = "runic-subagent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tracing = { workspace = true }
uuid = { workspace = true }

runic-agent = { path = "../runic-agent" }
runic-tool = { path = "../runic-tool" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
runic-provider = { path = "../runic-provider" }
runic-types = { path = "../runic-types" }
