[package]
name = "runic-substrate"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util"] }
tracing = { workspace = true }
uuid = { workspace = true }

runic-state = { path = "../runic-state" }
runic-types = { path = "../runic-types" }
runic-tool = { path = "../runic-tool" }

# Optional Postgres backends (session store + artifact metadata index). Off by
# default so memory/local-fs users don't pull sqlx + a Postgres/TLS stack.
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio", "tls-rustls", "postgres", "json", "chrono",
], optional = true }

[features]
postgres = ["dep:sqlx"]

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
proptest = { workspace = true }
